<resources>
    <string name="app_name">Kickdroid</string>

    <string name="main_welcome">Willkommen bei Kickdroid!</string>
    <string name="main_welcome_back">Willkommen zurück, %s</string>
    <string name="main_best_players">Beste Spieler</string>

    <string name="searching_loading">Suche nach Matches…</string>

    <string name="idle_status">Ein einsatzbereiter Server wurde gefunden. Du kannst nun ein Match starten!</string>
    <string name="idle_start">Match starten</string>

    <string name="matchmaking_waiting">Warte auf Spieler…</string>
    <string name="matchmaking_start">Match starten</string>
    <string name="matchmaking_leave">Verlassen</string>
    <string name="matchmaking_join">Beitreten</string>
    <string name="matchmaking_team_left">Team links</string>
    <string name="matchmaking_team_right">Team rechts</string>

    <string name="playing_vs">vs</string>
    <string name="playing_colon">:</string>

    <string name="user_set_info">Bitte gib einen Namen an. Der Name kann später nicht mehr geändert werden</string>
    <string name="user_set_action">Festlegen</string>
    <string name="user_name_hint">Name</string>
    <string name="user_error_empty">Bitte gib etwas ein</string>
    <string name="user_error_conflict">Dieser Name ist bereits vergeben</string>

    <string name="statistics_title">Beste Spieler</string>
    <string name="statistics_solo_title">Solo</string>
    <string name="statistics_duo_title">Duo</string>
    <string name="statistics_flex_title">Flex</string>
    <string name="statistics_empty">In dieser Kategorie wurden noch keine Matches ausgetragen</string>

    <plurals name="statistics_wins">
        <item quantity="one">%d Sieg</item>
        <item quantity="other">%d Siege</item>
    </plurals>

    <plurals name="statistics_goals">
        <item quantity="one">%d Tor</item>
        <item quantity="other">%d Tore</item>
    </plurals>

    <string name="player_wins">Siege</string>
    <string name="player_losses">Niederlagen</string>
    <string name="player_win_rate">{cmd-trophy} Siegesrate</string>
    <string name="player_average_goals">{cmd-soccer} Durchschnittliche Tore</string>
    <string name="player_crawls">{cmd-walk} Kriecher</string>

    <string name="view_error_retry">Erneut versuchen</string>

    <string name="error_client">Die App hat fehlerhafte Daten gesendet. Bitte melde das an die Entwickler</string>
    <string name="error_server">Der Server hat einen Fehler gemeldet. Bitte melde das an die Entwickler</string>
    <string name="error_unknown">Ein unbekannter Fehler ist aufgetreten</string>
    <string name="error_timeout">Der Server hat nicht rechtzeitig geantwortet. Überprüfe deine Internetverbindung</string>
    <string name="error_io">Ein Fehler bei der Datenübertragung ist aufgetreten. Überprüfe deine Internetverbindung</string>

    <string name="main_permission_title">Berechtigung benötigt</string>
    <string name="main_permission_message">Kickdroid benötigt die Standort-Benachrichtigung um andere Spieler in der Nähe zu finden</string>
    <string name="main_permission_positive">Gewähren</string>
    <string name="main_permission_negative">Abbrechen</string>
</resources>
